--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation fileTree(dir: "libs", includes: ["*.jar", "*.aar"])
     implementation project(':toolkit')
 
+    implementation 'androidx.palette:palette-ktx:1.0.0'
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
